# transformer-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  data-pipeline.md  github-publish.md  ml-fundamentals.md  quickstart.md  testing.md  training.md
notebooks/: train_alpaca_cleaned_colab.ipynb  train_corpus_colab.ipynb  train_shakespeare_colab.ipynb
src/: __init__.py
src/data/: loader.py  tokenizer.py
src/model/: __init__.py  builder.py  model_config.py  transformer.py
src/model/blocks/: __init__.py  ffn_block.py  transformer_block.py
src/model/components/: __init__.py  activations.py  attention.py  norms.py  positional.py
src/training/: checkpoint_store.py  config.py  trainer.py
tests/: test_checkpoint_store.py  test_data_loader.py  test_model_builder.py  test_tokenizer.py  test_training_smoke.py
