[tool.poetry]
name = "transformer-lab"
version = "0.1.0"
description = "Laboratoire d'expérimentation pour architectures Transformer (RoPE, RMSNorm, SwiGLU, Attention Standard/Linéaire)"
authors = ["Mohamed Oussaren"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2"
numpy = "^1.26"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
